--- a/src/app/pages/shopservices/shopservice-details/shopservice-details.component.scss
+++ b/src/app/pages/shopservices/shopservice-details/shopservice-details.component.scss
@@ -23,6 +23,9 @@
     .mat-tab-label {
       height: 64px;
     }
+    .mat-label {
+      color: #000 !important;
+    }
 
     // Temporary prefix alignment fix
     .mat-form-field-appearance-outline .mat-form-field-prefix,
