--- a/src/@appCore/modals/productFinder/productFinder.component.html
+++ b/src/@appCore/modals/productFinder/productFinder.component.html
@@ -16,7 +16,6 @@
       <!-- SEARCH -->
       <div class="search-wrapper mx-32 mx-md-0">
         <div class="search" fxFlex fxLayout="row" fxLayoutAlign="start center">
-          <mat-icon>search</mat-icon>
           <input #filter placeholder="Search for a product" />
         </div>
       </div>
@@ -36,17 +35,9 @@
         [@animateStagger]="{ value: '50' }"
         inner-scroll
       >
-        <!-- ID Column -->
-        <ng-container matColumnDef="id">
-          <mat-header-cell *matHeaderCellDef mat-sort-header>ID</mat-header-cell>
-          <mat-cell *matCellDef="let product">
-            <p class="text-truncate">{{ product.id }}</p>
-          </mat-cell>
-        </ng-container>
-
         <!-- Name Column -->
         <ng-container matColumnDef="name">
-          <mat-header-cell *matHeaderCellDef mat-sort-header>Name</mat-header-cell>
+          <mat-header-cell *matHeaderCellDef mat-sort-header fxHide mat-sort-header fxShow.gt-md>Name</mat-header-cell>
           <mat-cell *matCellDef="let product">
             <p class="text-truncate">{{ product.name }}</p>
           </mat-cell>
@@ -67,7 +58,7 @@
           <mat-header-cell *matHeaderCellDef mat-sort-header fxHide fxShow.gt-xs>Price</mat-header-cell>
           <mat-cell *matCellDef="let product" fxHide fxShow.gt-xs>
             <p class="price text-truncate">
-              {{ product.priceTaxIncl | currency: 'USD':'symbol' }}
+              {{ product.priceTaxIncl | currency: '₱':'symbol' }}
             </p>
           </mat-cell>
         </ng-container>
@@ -106,7 +97,7 @@
           *matRowDef="let product; columns: displayedColumns"
           class="product"
           matRipple
-          [routerLink]="'/products/details/' + product.id + '/' + product.handle"
+          (click)="selectProduct(product)"
         >
         </mat-row>
       </mat-table>
