finish adding services

--- a/src/app/pages/products/product-details/product-details.component.html
+++ b/src/app/pages/products/product-details/product-details.component.html
@@ -134,13 +134,7 @@
 
                 <mat-form-field appearance="outline" floatLabel="always" class="w-100-p">
                   <mat-label>Tax Included Price</mat-label>
-                  <input
-                    matInput
-                    placeholder="Tax Included Price"
-                    name="priceTaxIncl"
-                    formControlName="priceTaxIncl"
-                    type="number"
-                  />
+                  <input matInput placeholder="Tax Included Price" name="price" formControlName="price" type="number" />
                   <span matPrefix>$&nbsp;</span>
                 </mat-form-field>
 
