--- a/src/app/pages/shopservices/shopservice-details/shopservice-details.component.html
+++ b/src/app/pages/shopservices/shopservice-details/shopservice-details.component.html
@@ -36,7 +36,7 @@
         class="save-product-button"
         [disabled]="serviceForm.invalid"
         *ngIf="pageType === 'new'"
-        (click)="addProduct()"
+        (click)="addService()"
       >
         <span>ADD</span>
       </button>
@@ -46,7 +46,7 @@
         class="save-product-button"
         [disabled]="serviceForm.invalid || serviceForm.pristine"
         *ngIf="pageType === 'edit'"
-        (click)="saveProduct()"
+        (click)="addService()"
       >
         <span>SAVE</span>
       </button>
@@ -109,20 +109,12 @@
                         placeholder="Grand total Price"
                         name="totalPrice"
                         formControlName="grandTotal"
+                        class="grand-total"
                         type="number"
                       />
                       <span matPrefix>₱&nbsp;</span>
                     </mat-form-field>
                   </div>
-                  <button
-                    mat-mini-fab
-                    color="mat-primary"
-                    class="add-file-button"
-                    (click)="openProducFinder()"
-                    aria-label="Add file"
-                  >
-                    <mat-icon>add</mat-icon>
-                  </button>
                 </div>
 
                 <table class="simple">
@@ -131,7 +123,18 @@
                       <th class="w-20">Name</th>
                       <th class="w-20">Price</th>
                       <th class="w-20">Quantity</th>
-                      <th class="w-40"></th>
+                      <th class="w-40 add-prod-header">
+                        <button
+                          mat-mini-fab
+                          color="mat-primary"
+                          matTooltip="Add a product"
+                          class="add-file-button"
+                          (click)="openProducFinder()"
+                          aria-label="Add file"
+                        >
+                          <mat-icon>add</mat-icon>
+                        </button>
+                      </th>
                     </tr>
                   </thead>
                   <tbody *ngIf="producsNeeded && producsNeeded.length">
@@ -140,11 +143,11 @@
                         {{ item.name }}
                       </td>
                       <td>
-                        {{ item.priceTaxIncl }}
+                        {{ item.price }}
                       </td>
                       <td>
                         <mat-button-toggle-group appearance="legacy" name="fontStyle" aria-label="Font Style">
-                          <mat-button-toggle class="item-qty" value="bold"> {{ item.quantity }}</mat-button-toggle>
+                          <mat-button-toggle class="item-qty" value="bold"> {{ item.srvcQty }}</mat-button-toggle>
                           <mat-button-toggle value="italic" (click)="onItemsQty('remove', item)">
                             <mat-icon>remove</mat-icon></mat-button-toggle
                           >
@@ -166,7 +169,12 @@
               <div class="tab-content p-24" fusePerfectScrollbar>
                 <mat-form-field appearance="outline" floatLabel="always" class="w-100-p">
                   <mat-label>Select Catergory</mat-label>
-                  <mat-chip-list #chipList aria-label="category selection">
+                  <mat-chip-list
+                    #chipList
+                    aria-label="category selection"
+                    name="categories"
+                    formControlName="categories"
+                  >
                     <mat-chip
                       *ngFor="let category of serviceCategory"
                       [selectable]="selectable"
@@ -195,7 +203,12 @@
 
                 <mat-form-field appearance="outline" floatLabel="always" class="w-100-p">
                   <mat-label>Select Personnel</mat-label>
-                  <mat-chip-list #personnelList aria-label="personnel selection">
+                  <mat-chip-list
+                    #personnelList
+                    aria-label="personnel selection"
+                    name="personnels"
+                    formControlName="personnels"
+                  >
                     <mat-chip
                       *ngFor="let personnel of servicePersonnel"
                       [selectable]="selectable"
