--- a/src/app/pages/products/product-details/product-details.component.html
+++ b/src/app/pages/products/product-details/product-details.component.html
@@ -34,7 +34,7 @@
       <button
         mat-raised-button
         class="save-product-button"
-        [disabled]="productForm.invalid"
+        [disabled]="productForm.invalid || isSaving"
         *ngIf="pageType === 'new'"
         (click)="addProduct()"
       >
@@ -44,7 +44,7 @@
       <button
         mat-raised-button
         class="save-product-button"
-        [disabled]="productForm.invalid || productForm.pristine"
+        [disabled]="productForm.invalid || productForm.pristine || isSaving"
         *ngIf="pageType === 'edit'"
         (click)="saveProduct()"
       >
@@ -55,6 +55,7 @@
 
     <!-- CONTENT CARD -->
     <div class="content-card">
+      <mat-progress-bar mode="indeterminate" *ngIf="isSaving"></mat-progress-bar>
       <!-- CONTENT -->
       <div class="content">
         <form name="productForm" [formGroup]="productForm" class="product w-100-p" fxLayout="column" fxFlex>
