added major updates

--- a/src/@appCore/modals/checker/checker.component.html
+++ b/src/@appCore/modals/checker/checker.component.html
@@ -1,7 +1,7 @@
 <div class="dialog-content-wrapper">
   <mat-toolbar matDialogTitle class="mat-accent m-0">
     <mat-toolbar-row fxLayout="row" fxLayoutAlign="space-between center">
-      <span *ngIf="!isLoad" class="title dialog-title">Hello this may take a moment..</span>
+      <span *ngIf="!isLoad" class="title dialog-title">Checking account and session validity..</span>
       <span *ngIf="isLoad && !isReg" class="title dialog-title">Please provide shop information.</span>
     </mat-toolbar-row>
 
