--- a/src/app/layout/components/quick-panel/quick-panel.component.html
+++ b/src/app/layout/components/quick-panel/quick-panel.component.html
@@ -1,20 +1,42 @@
 <div fxLayout="column" fxFlex fusePerfectScrollbar>
-    <mat-list class="date" cdkFocusRegionStart>
-        <h4 matSubheader cdkFocusInit>
-            <span>Today</span>
-        </h4>
+  <mat-list class="date" cdkFocusRegionStart>
+    <h4 matSubheader cdkFocusInit>
+      <span>Today</span>
+    </h4>
 
-        <div class="secondary-text mat-display-1 mb-0 p-16">
-            <div class="mb-6">
-                {{ date | date: 'EEEE' }}
-            </div>
-            <div fxLayout="row" fxLayoutAlign="start start">
-                <span> {{ date | date: 'd' }}</span>
-                <span class="mat-subheading-1">th</span>
-                <span> {{ date | date: 'MMMM' }}</span>
-            </div>
-        </div>
-    </mat-list>
+    <div class="secondary-text mat-display-1 mb-0 p-16">
+      <div class="mb-6">
+        {{ date | date: 'EEEE' }}
+      </div>
+      <div fxLayout="row" fxLayoutAlign="start start">
+        <span> {{ date | date: 'd' }}</span>
+        <span class="mat-subheading-1">th</span>
+        <span> {{ date | date: 'MMMM' }}</span>
+      </div>
+    </div>
+  </mat-list>
 
-    <mat-divider cdkFocusRegionEnd></mat-divider>
+  <mat-divider cdkFocusRegionEnd></mat-divider>
+
+  <div class="fuse-card">
+    <div class="p-12" fxLayout="row" fxLayoutAlign="start center">
+      <img class="w-40 h-40 border-radius-100" src="assets/images/avatars/profile.jpg" />
+
+      <div class="ml-16">
+        <div class="text-bold">Christy</div>
+        <div class="h5 text-bold secondary-text">20 mins. ago</div>
+        <star-rating
+          value="5"
+          totalstars="5"
+          checkedcolor="orange"
+          uncheckedcolor="black"
+          size="24px"
+          readonly="true"
+        ></star-rating>
+      </div>
+    </div>
+    <div class="p-5 read-comments">
+      <a color="accent">READ COMMENTS</a>
+    </div>
+  </div>
 </div>
