--- a/src/app/layout/components/quick-panel/quick-panel.component.scss
+++ b/src/app/layout/components/quick-panel/quick-panel.component.scss
@@ -1,13 +1,36 @@
 quick-panel {
-    display: flex;
-    flex-direction: column;
-    flex: 1 1 auto;
-    width: 280px;
-    min-width: 280px;
-    max-width: 280px;
-    z-index: 99;
+  display: flex;
+  flex-direction: column;
+  flex: 1 1 auto;
+  width: 280px;
+  min-width: 280px;
+  max-width: 280px;
+  z-index: 99;
 
-    .mat-slide-toggle-content {
-        flex: 1;
+  .mat-slide-toggle-content {
+    flex: 1;
+  }
+  .star-rating-list {
+    text-align: center;
+    width: 100%;
+    padding: 24px;
+    margin: 0 auto;
+    width: 100%;
+    border-radius: 8px;
+    box-shadow: 0 2px 1px -1px rgba(0, 0, 0, 0.2), 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12);
+  }
+  .fuse-card {
+    max-width: 280px;
+    min-width: 280px;
+  }
+  .read-comments {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    a {
+      cursor: pointer;
+      font-size: 10px;
+      padding: 3px;
     }
+  }
 }
