--- a/src/app/pages/appointments/event-form/event-form.component.html
+++ b/src/app/pages/appointments/event-form/event-form.component.html
@@ -15,67 +15,12 @@
         <input matInput name="title" formControlName="title" required />
       </mat-form-field>
 
-      <div fxFlex="1 0 auto" fxLayout="column" fxLayout.gt-xs="row" formGroupName="color">
-        <mat-form-field appearance="outline" class="pr-sm-8" fxFlex="50">
-          <mat-label>Primary color</mat-label>
-          <input
-            matInput
-            class="primary-color-input border-radius-4"
-            name="primary color"
-            formControlName="primary"
-            cpWidth="290px"
-            [style.background]="event.color.primary"
-            (colorPickerChange)="event.color.primary = $event; eventForm.patchValue({ color: { primary: $event } })"
-          />
-        </mat-form-field>
-
-        <mat-form-field appearance="outline" class="pl-sm-8" fxFlex="50">
-          <mat-label>Secondary color</mat-label>
-          <input
-            matInput
-            class="secondary-color-input border-radius-4"
-            name="secondary color"
-            formControlName="secondary"
-            cpWidth="290px"
-            [style.background]="event.color.secondary"
-            (colorPickerChange)="event.color.secondary = $event; eventForm.patchValue({ color: { secondary: $event } })"
-          />
-        </mat-form-field>
-      </div>
-
-      <div class="pb-32" fxFlex="1 0 auto" fxLayout="row">
-        <mat-slide-toggle name="allDay" formControlName="allDay" class="mr-24" aria-label="All day">
-          All Day
-        </mat-slide-toggle>
-      </div>
-
-      <div fxFlex="1 0 auto" fxLayout="column" fxLayout.gt-xs="row">
-        <mat-form-field appearance="outline" class="pr-sm-8" fxFlex="50">
-          <mat-label>Start date</mat-label>
-          <input matInput [matDatepicker]="startDatePicker" name="start" formControlName="start" />
-          <mat-datepicker-toggle matSuffix [for]="startDatePicker"></mat-datepicker-toggle>
-          <mat-datepicker #startDatePicker></mat-datepicker>
-        </mat-form-field>
-
-        <mat-form-field appearance="outline" class="pl-sm-8 no-errors-spacer" fxFlex="50">
-          <mat-label>Start time</mat-label>
-          <input matInput type="time" />
-        </mat-form-field>
-      </div>
-
-      <div fxFlex="1 0 auto" fxLayout="column" fxLayout.gt-xs="row">
-        <mat-form-field appearance="outline" class="pr-sm-8" fxFlex="50">
-          <mat-label>End date</mat-label>
-          <input matInput [matDatepicker]="endDatePicker" name="end" formControlName="end" />
-          <mat-datepicker-toggle matSuffix [for]="endDatePicker"></mat-datepicker-toggle>
-          <mat-datepicker #endDatePicker></mat-datepicker>
-        </mat-form-field>
-
-        <mat-form-field appearance="outline" class="pl-sm-8 no-errors-spacer" fxFlex="50">
-          <mat-label>End time</mat-label>
-          <input matInput type="time" />
-        </mat-form-field>
-      </div>
+      <mat-form-field appearance="outline" class="w-100-p">
+        <mat-label>Date</mat-label>
+        <input matInput [matDatepicker]="startDatePicker" name="start" formControlName="start" />
+        <mat-datepicker-toggle matSuffix [for]="startDatePicker"></mat-datepicker-toggle>
+        <mat-datepicker #startDatePicker></mat-datepicker>
+      </mat-form-field>
 
       <mat-form-field appearance="outline" formGroupName="meta" class="w-100-p">
         <mat-label>Location</mat-label>
