--- a/src/app/layout/components/toolbar/toolbar.component.html
+++ b/src/app/layout/components/toolbar/toolbar.component.html
@@ -36,7 +36,7 @@
       </button>
 
       <mat-menu #userMenu="matMenu" [overlapTrigger]="false">
-        <button mat-menu-item>
+        <button mat-menu-item [routerLink]="['/account']">
           <mat-icon>account_circle</mat-icon>
           <span>Account</span>
         </button>
