--- a/src/@appCore/modals/checker/checker.component.html
+++ b/src/@appCore/modals/checker/checker.component.html
@@ -1,137 +1,163 @@
 <div class="dialog-content-wrapper">
-  <mat-toolbar matDialogTitle class="mat-accent m-0">
-    <mat-toolbar-row fxLayout="row" fxLayoutAlign="space-between center">
-      <span *ngIf="!isLoad" class="title dialog-title">Checking account and session validity..</span>
-      <span *ngIf="isLoad && !isReg" class="title dialog-title">Please provide shop information.</span>
-    </mat-toolbar-row>
-
-    <mat-toolbar-row class="toolbar-bottom py-16" fxLayout="column" fxLayoutAlign="center center">
-      <div class="contact-name mt-8"></div>
-    </mat-toolbar-row>
-  </mat-toolbar>
-  <ng-container *ngIf="!isLoad">
-    <mat-progress-bar mode="indeterminate"></mat-progress-bar>
-    <div class="validating-account">
-      <small>Validating account...</small>
+  <ng-container *ngIf="isLoad && (shopStatus === 'REJECTED' || shopStatus === 'PENDING')">
+    <div class="waiting" *ngIf="shopStatus === 'REJECTED'">
+      <div>
+        <h3>Your Information got rejected</h3>
+      </div>
+      <div class="imogi">
+        <img src="/assets//images/avatars/sad-life.gif" />
+      </div>
+    </div>
+    <div class="waiting" *ngIf="shopStatus === 'PENDING'">
+      <div>
+        <h3>Please wait from admin to respond</h3>
+      </div>
+      <div class="imogi">
+        <img src="/assets//images/avatars/waiting.gif" />
+      </div>
     </div>
   </ng-container>
-  <ng-container *ngIf="isSaving">
-    <mat-progress-bar mode="indeterminate"></mat-progress-bar>
-    <div class="validating-account">
-      <small>Saving shop information ...</small>
+  <ng-container *ngIf="!shopStatus && !isReg">
+    <mat-toolbar matDialogTitle class="mat-accent m-0">
+      <mat-toolbar-row fxLayout="row" fxLayoutAlign="space-between center">
+        <span *ngIf="!isLoad" class="title dialog-title">Checking account and session validity..</span>
+        <span *ngIf="isLoad && !isReg" class="title dialog-title">Please provide shop information.</span>
+      </mat-toolbar-row>
+
+      <mat-toolbar-row class="toolbar-bottom py-16" fxLayout="column" fxLayoutAlign="center center">
+        <div class="contact-name mt-8"></div>
+      </mat-toolbar-row>
+    </mat-toolbar>
+    <ng-container *ngIf="!isLoad">
+      <mat-progress-bar mode="indeterminate"></mat-progress-bar>
+      <div class="validating-account">
+        <small>Validating account...</small>
+      </div>
+    </ng-container>
+    <ng-container *ngIf="isSaving">
+      <mat-progress-bar mode="indeterminate"></mat-progress-bar>
+      <div class="validating-account">
+        <small>Saving shop information ...</small>
+      </div>
+    </ng-container>
+    <div mat-dialog-content class="p-24 pb-0 m-0" fusePerfectScrollbar>
+      <form [formGroup]="contactForm" *ngIf="isLoad && !isReg">
+        <div fxLayout="row" fxLayoutAlign="start start">
+          <mat-form-field appearance="outline" fxFlex>
+            <mat-label>Shop Name</mat-label>
+            <mat-icon matSuffix class="secondary-text">star</mat-icon>
+            <input name="name" formControlName="name" matInput required />
+          </mat-form-field>
+        </div>
+
+        <div fxLayout="row" fxLayoutAlign="start start">
+          <mat-form-field appearance="outline" fxFlex>
+            <mat-label>Secondary Name</mat-label>
+            <mat-icon matSuffix class="secondary-text">star</mat-icon>
+            <input name="secondName" formControlName="secondName" matInput />
+          </mat-form-field>
+        </div>
+
+        <div fxLayout="row" fxLayoutAlign="start start">
+          <mat-form-field appearance="outline" fxFlex>
+            <mat-label>Mobile number</mat-label>
+            <mat-icon matSuffix class="secondary-text">phone</mat-icon>
+            <input name="mobile" formControlName="mobile" matInput />
+            <mat-error *ngIf="contactForm.controls.mobile.errors">
+              <ng-container *ngIf="contactForm.controls.mobile.errors.pattern">
+                Invalid Mobile number
+              </ng-container>
+            </mat-error>
+          </mat-form-field>
+        </div>
+
+        <div fxLayout="row" fxLayoutAlign="start start">
+          <mat-form-field appearance="outline" fxFlex>
+            <mat-label>Telephone number</mat-label>
+            <mat-icon matSuffix class="secondary-text">phone</mat-icon>
+            <input name="phone" formControlName="phone" matInput />
+            <mat-error *ngIf="contactForm.controls.phone.errors">
+              <ng-container *ngIf="contactForm.controls.phone.errors.pattern">
+                Invalid Phone number
+              </ng-container>
+            </mat-error>
+          </mat-form-field>
+        </div>
+
+        <div fxLayout="row" fxLayoutAlign="start start">
+          <mat-form-field appearance="outline" fxFlex>
+            <mat-label>Email</mat-label>
+            <mat-icon matSuffix class="secondary-text">email</mat-icon>
+            <input name="email" formControlName="email" matInput type="email" />
+            <mat-error
+              *ngIf="!contactForm.get('email').hasError('required') && contactForm.get('email').hasError('email')"
+            >
+              Please enter a valid email address
+            </mat-error>
+          </mat-form-field>
+        </div>
+
+        <div fxLayout="row" fxLayoutAlign="start start">
+          <mat-form-field appearance="outline" fxFlex>
+            <mat-label>Page Link or Domain</mat-label>
+            <mat-icon matSuffix class="secondary-text">link</mat-icon>
+            <input name="domain" formControlName="domain" matInput />
+            <mat-error *ngIf="contactForm.controls.domain.errors">
+              <ng-container *ngIf="contactForm.controls.domain.errors.pattern">
+                Invalid URL
+              </ng-container>
+            </mat-error>
+          </mat-form-field>
+        </div>
+
+        <div fxLayout="row" fxLayoutAlign="start start">
+          <mat-form-field appearance="outline" (click)="birthdayDatePicker.open()" fxFlex>
+            <mat-label>Founded</mat-label>
+            <input matInput [matDatepicker]="birthdayDatePicker" name="founded" formControlName="founded" />
+            <mat-datepicker-toggle matSuffix [for]="birthdayDatePicker"></mat-datepicker-toggle>
+            <mat-datepicker #birthdayDatePicker></mat-datepicker>
+          </mat-form-field>
+        </div>
+
+        <div fxLayout="row" fxLayoutAlign="start start">
+          <mat-form-field appearance="outline" fxFlex>
+            <mat-label>Address </mat-label>
+            <mat-icon matSuffix class="secondary-text">home</mat-icon>
+            <input
+              matTooltip="(approximate location or any landmarks will do)"
+              ngx-google-places-autocomplete
+              [options]="{
+                types: []
+              }"
+              #placesRef="ngx-places"
+              (onAddressChange)="handleAddressChange($event)"
+              name="address"
+              formControlName="address"
+              (blur)="patchValuesHere(contactForm.value.address)"
+              matInput
+            />
+          </mat-form-field>
+        </div>
+
+        <div fxLayout="row" class="textarea-wrapper" fxLayoutAlign="start start">
+          <mat-form-field appearance="outline" fxFlex>
+            <mat-label>Notes / Description</mat-label>
+            <textarea name="notes" formControlName="notes" matInput type="text" max-rows="4"></textarea>
+          </mat-form-field>
+        </div>
+      </form>
+    </div>
+
+    <div mat-dialog-actions class="m-0 p-16" fxLayout="row" fxLayoutAlign="end center" *ngIf="isLoad" fxFill>
+      <button
+        mat-raised-button
+        class="save-button"
+        (click)="onSave()"
+        [disabled]="contactForm.invalid"
+        aria-label="SAVE"
+      >
+        Save
+      </button>
     </div>
   </ng-container>
-  <div mat-dialog-content class="p-24 pb-0 m-0" fusePerfectScrollbar>
-    <form [formGroup]="contactForm" *ngIf="isLoad && !isReg">
-      <div fxLayout="row" fxLayoutAlign="start start">
-        <mat-form-field appearance="outline" fxFlex>
-          <mat-label>Shop Name</mat-label>
-          <mat-icon matSuffix class="secondary-text">star</mat-icon>
-          <input name="name" formControlName="name" matInput required />
-        </mat-form-field>
-      </div>
-
-      <div fxLayout="row" fxLayoutAlign="start start">
-        <mat-form-field appearance="outline" fxFlex>
-          <mat-label>Secondary Name</mat-label>
-          <mat-icon matSuffix class="secondary-text">star</mat-icon>
-          <input name="secondName" formControlName="secondName" matInput />
-        </mat-form-field>
-      </div>
-
-      <div fxLayout="row" fxLayoutAlign="start start">
-        <mat-form-field appearance="outline" fxFlex>
-          <mat-label>Mobile number</mat-label>
-          <mat-icon matSuffix class="secondary-text">phone</mat-icon>
-          <input name="mobile" formControlName="mobile" matInput />
-          <mat-error *ngIf="contactForm.controls.mobile.errors">
-            <ng-container *ngIf="contactForm.controls.mobile.errors.pattern">
-              Invalid Mobile number
-            </ng-container>
-          </mat-error>
-        </mat-form-field>
-      </div>
-
-      <div fxLayout="row" fxLayoutAlign="start start">
-        <mat-form-field appearance="outline" fxFlex>
-          <mat-label>Telephone number</mat-label>
-          <mat-icon matSuffix class="secondary-text">phone</mat-icon>
-          <input name="phone" formControlName="phone" matInput />
-          <mat-error *ngIf="contactForm.controls.phone.errors">
-            <ng-container *ngIf="contactForm.controls.phone.errors.pattern">
-              Invalid Phone number
-            </ng-container>
-          </mat-error>
-        </mat-form-field>
-      </div>
-
-      <div fxLayout="row" fxLayoutAlign="start start">
-        <mat-form-field appearance="outline" fxFlex>
-          <mat-label>Email</mat-label>
-          <mat-icon matSuffix class="secondary-text">email</mat-icon>
-          <input name="email" formControlName="email" matInput type="email" />
-          <mat-error
-            *ngIf="!contactForm.get('email').hasError('required') && contactForm.get('email').hasError('email')"
-          >
-            Please enter a valid email address
-          </mat-error>
-        </mat-form-field>
-      </div>
-
-      <div fxLayout="row" fxLayoutAlign="start start">
-        <mat-form-field appearance="outline" fxFlex>
-          <mat-label>Page Link or Domain</mat-label>
-          <mat-icon matSuffix class="secondary-text">link</mat-icon>
-          <input name="domain" formControlName="domain" matInput />
-          <mat-error *ngIf="contactForm.controls.domain.errors">
-            <ng-container *ngIf="contactForm.controls.domain.errors.pattern">
-              Invalid URL
-            </ng-container>
-          </mat-error>
-        </mat-form-field>
-      </div>
-
-      <div fxLayout="row" fxLayoutAlign="start start">
-        <mat-form-field appearance="outline" (click)="birthdayDatePicker.open()" fxFlex>
-          <mat-label>Founded</mat-label>
-          <input matInput [matDatepicker]="birthdayDatePicker" name="founded" formControlName="founded" />
-          <mat-datepicker-toggle matSuffix [for]="birthdayDatePicker"></mat-datepicker-toggle>
-          <mat-datepicker #birthdayDatePicker></mat-datepicker>
-        </mat-form-field>
-      </div>
-
-      <div fxLayout="row" fxLayoutAlign="start start">
-        <mat-form-field appearance="outline" fxFlex>
-          <mat-label>Address </mat-label>
-          <mat-icon matSuffix class="secondary-text">home</mat-icon>
-          <input
-            matTooltip="(approximate location or any landmarks will do)"
-            ngx-google-places-autocomplete
-            [options]="{
-              types: []
-            }"
-            #placesRef="ngx-places"
-            (onAddressChange)="handleAddressChange($event)"
-            name="address"
-            formControlName="address"
-            (blur)="patchValuesHere(contactForm.value.address)"
-            matInput
-          />
-        </mat-form-field>
-      </div>
-
-      <div fxLayout="row" class="textarea-wrapper" fxLayoutAlign="start start">
-        <mat-form-field appearance="outline" fxFlex>
-          <mat-label>Notes / Description</mat-label>
-          <textarea name="notes" formControlName="notes" matInput type="text" max-rows="4"></textarea>
-        </mat-form-field>
-      </div>
-    </form>
-  </div>
-
-  <div mat-dialog-actions class="m-0 p-16" fxLayout="row" fxLayoutAlign="end center" *ngIf="isLoad" fxFill>
-    <button mat-raised-button class="save-button" (click)="onSave()" [disabled]="contactForm.invalid" aria-label="SAVE">
-      Save
-    </button>
-  </div>
 </div>
