--- a/src/@appCore/modals/checker/checker.component.scss
+++ b/src/@appCore/modals/checker/checker.component.scss
@@ -1,6 +1,24 @@
 @import 'src/@fuse/scss/fuse';
 
 .checker-dialog {
+  .waiting {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    h3 {
+      text-align: center;
+    }
+    .imogi {
+      width: 100%;
+      justify-content: center;
+      display: flex;
+
+      img {
+        height: 200px;
+        width: 200px;
+      }
+    }
+  }
   .pac-container,
   .pac-item {
     width: inherit !important;
