add proceed to assistance

--- a/src/@appCore/modals/AssistanceDetails/assistance-details.component.html
+++ b/src/@appCore/modals/AssistanceDetails/assistance-details.component.html
@@ -70,7 +70,7 @@
   </div>
 
   <div mat-dialog-actions class="m-0 p-16" fxLayout="row" fxLayoutAlign="end center">
-    <button mat-button class="save-button" (click)="matDialogRef.close(['save', contactForm])" aria-label="SAVE">
+    <button mat-button class="save-button" (click)="onProceed()" aria-label="SAVE">
       Proceed
     </button>
   </div>
