--- a/src/app/pages/assistance-proceed/assistance-proceed.component.scss
+++ b/src/app/pages/assistance-proceed/assistance-proceed.component.scss
@@ -1,4 +1,28 @@
-app-assistance {
-  .assistance-page {
+.assistance-page {
+  display: flex;
+  .client-info {
+    .none-details {
+      border: 2px dashed hsla(0, 0%, 31%, 0.37);
+      width: 100%;
+      height: 80px;
+      > .none-labels {
+        text-align: center;
+        color: darkgrey;
+        margin-top: 10px;
+      }
+    }
+  }
+
+  .assistance-info {
+    background: blue;
+    margin-left: 20px;
+    width: 100% !important;
+    background: white;
+    border-radius: 8px;
+    border: 1px solid rgba(100, 100, 100, 0.12);
+    > .header-assistance {
+      display: flex;
+      justify-content: space-between;
+    }
   }
 }
